2011-03-14  John Dallaway  <john@dallaway.org.uk>

	* cdl/hal_cortexm_lpc17xx.cdl: Do not implement the
	CYGINT_PROFILE_HAL_TIMER interface at present.

2010-12-10  Ilija Kocho  <ilijak@siva.com.mk>

	* cdl/hal_cortexm_lpc17xx.cdl:
	* include/hal_cache.h:
	* include/hal_diag.h:
	* include/plf_stub.h:
	* include/var_arch.h:
	* include/variant.inc:
	* include/var_intr.h:
	* include/var_io.h:
	* src/hal_diag.c:
	* src/lpc17xx_misc.c:
	New package -- NXP LPC17XX variant HAL.

//===========================================================================
// ####GPLCOPYRIGHTBEGIN####                                                
// -------------------------------------------                              
// This file is part of eCos, the Embedded Configurable Operating System.   
// Copyright (C) 2010, 2011 Free Software Foundation, Inc.                        
//
// This program is free software; you can redistribute it and/or modify     
// it under the terms of the GNU General Public License as published by     
// the Free Software Foundation; either version 2 or (at your option) any   
// later version.                                                           
//
// This program is distributed in the hope that it will be useful, but      
// WITHOUT ANY WARRANTY; without even the implied warranty of               
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU        
// General Public License for more details.                                 
//
// You should have received a copy of the GNU General Public License        
// along with this program; if not, write to the                            
// Free Software Foundation, Inc., 51 Franklin Street,                      
// Fifth Floor, Boston, MA  02110-1301, USA.                                
// -------------------------------------------                              
// ####GPLCOPYRIGHTEND####                                                  